cmake_minimum_required(VERSION 3.31.3)

project(LightYears
	VERSION 1.0.0 # new_issue.new_features.bug_fixes
	LANGUAGES C CXX
)

set(CMAKE_CXX_STANDARD          14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS       OFF)

# create a variable
set(LIGHT_YEARS_GAME_TARGET_NAME LightYearsGame)

add_subdirectory(LightYears)